--- a/domain/sharedKernel/pom.xml
+++ b/domain/sharedKernel/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.msb</groupId>
+            <artifactId>supports</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
