--- a/domain/ekyc/pom.xml
+++ b/domain/ekyc/pom.xml
@@ -3,26 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>credit_card_backend</artifactId>
+        <artifactId>domain</artifactId>
         <groupId>com.msb</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>domain</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>ekyc</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    <modules>
-        <module>security</module>
-        <module>customer</module>
-        <module>sharedKernel</module>
-        <module>s3</module>
-        <module>ekyc</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.msb</groupId>
+            <artifactId>sharedKernel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.msb</groupId>
+            <artifactId>supports</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
