--- a/bootloader/pom.xml
+++ b/bootloader/pom.xml
@@ -36,37 +36,21 @@
             <artifactId>application</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--        DOMAIN      -->
+<!--        &lt;!&ndash;        PORTS PRIMARY      &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.msb</groupId>-->
+<!--            <artifactId>webService</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash;        PORTS SECONDARY     &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.msb</groupId>-->
+<!--            <artifactId>mySQLDatabase</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.msb</groupId>
-            <artifactId>customer</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.msb</groupId>
-            <artifactId>security</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.msb</groupId>
-            <artifactId>sharedKernel</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!--        PORTS PRIMARY      -->
-        <dependency>
-            <groupId>com.msb</groupId>
-            <artifactId>webService</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!--        PORTS SECONDARY     -->
-        <dependency>
-            <groupId>com.msb</groupId>
-            <artifactId>mySQLDatabase</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.msb</groupId>
-            <artifactId>supports</artifactId>
+            <artifactId>ports</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
