--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -23,6 +23,9 @@
         <module>sharedKernel</module>
         <module>s3</module>
         <module>ekyc</module>
+        <module>finance</module>
+        <module>creditCardRegistration</module>
+        <module>consultancy</module>
     </modules>
 
 </project>
