--- a/bootloader/src/main/resources/application-dev.properties
+++ b/bootloader/src/main/resources/application-dev.properties
@@ -14,3 +14,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#s3
+s3.credential.accessKey=xxmmmssd
+s3.credential.secretKey=xxmmmssdxcxc
+#ekyc
+eKYC.trustingSocial.accessKey=5c2cc395-f261-4f52-9941-93c1ded603aa
+eKYC.trustingSocial.secretKey=VANmzKkyi45SpClLfOdJYFKQrG6fJCQ9
