--- a/bootloader/pom.xml
+++ b/bootloader/pom.xml
@@ -36,21 +36,26 @@
             <artifactId>application</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-<!--        &lt;!&ndash;        PORTS PRIMARY      &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.msb</groupId>-->
-<!--            <artifactId>webService</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
-<!--        &lt;!&ndash;        PORTS SECONDARY     &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.msb</groupId>-->
-<!--            <artifactId>mySQLDatabase</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
+        <!--        PORTS PRIMARY      -->
         <dependency>
             <groupId>com.msb</groupId>
-            <artifactId>ports</artifactId>
+            <artifactId>webService</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--        PORTS SECONDARY     -->
+        <dependency>
+            <groupId>com.msb</groupId>
+            <artifactId>mySQLDatabase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.msb</groupId>
+            <artifactId>s3Stored</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.msb</groupId>
+            <artifactId>trustingSocial</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
