--- a/domain/notification/pom.xml
+++ b/domain/notification/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>credit_card_backend</artifactId>
+        <artifactId>domain</artifactId>
         <groupId>com.msb</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ports</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>primary</module>
-        <module>secondary</module>
-    </modules>
+    <artifactId>notification</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
