--- a/ports/primary/webService/pom.xml
+++ b/ports/primary/webService/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>primary</artifactId>
         <groupId>com.msb</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
