--- a/ports/secondary/pom.xml
+++ b/ports/secondary/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ports</artifactId>
         <groupId>com.msb</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,6 +15,7 @@
     <modules>
         <module>mySQLDatabase</module>
         <module>s3Stored</module>
+        <module>trustingSocial</module>
     </modules>
 
     <properties>
