--- a/bootloader/src/main/resources/application-dev.properties
+++ b/bootloader/src/main/resources/application-dev.properties
@@ -11,9 +11,10 @@ spring.datasource.username=cc_app_user
 spring.datasource.password=BjkFBUExAZr5m4uNf
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #jpa
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.hibernate.naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #s3
 s3.credential.accessKey=xxmmmssd
