--add migrate database

--- a/bootloader/src/main/resources/application-dev.properties
+++ b/bootloader/src/main/resources/application-dev.properties
@@ -11,11 +11,20 @@ spring.datasource.username=cc_app_user
 spring.datasource.password=BjkFBUExAZr5m4uNf
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #jpa
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.hibernate.naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.connectionTimeout=30000 
+spring.datasource.hikari.idleTimeout=600000 
+spring.datasource.hikari.maxLifetime=1800000 
 
+#migrate
+spring.liquibase.contexts=dev
+spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+spring.liquibase.database-change-log-table=database_tracking_log
+spring.liquibase.database-change-log-lock-table=database_tracking_log_lock
 #s3
 s3.credential.accessKey=xxmmmssd
 s3.credential.secretKey=xxmmmssdxcxc
