--- a/ports/secondary/mySQLDatabase/pom.xml
+++ b/ports/secondary/mySQLDatabase/pom.xml
@@ -34,6 +34,14 @@
             <artifactId>mapstruct</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.msb</groupId>
             <artifactId>application</artifactId>
             <version>1.0-SNAPSHOT</version>
